# snake-rpc

./: .gitignore  pyproject.toml  requirements.txt  setup.py
scripts/: gen-ss-cert.sh  tests.sh
snekrpc/: cli.py  pack.py
snekrpc/utils/: function.py
