[project]
name = "snekrpc"
version = "0.1.0"
authors = [
    { name = "Miguel Turner", email = "mturner@beta.team" }
]
dependencies = [
    "msgpack>=1.0.8",
    "temporenc>=0.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["snekrpc"]

[tool.distutils.bdist_wheel]
universal = true
